--- a/project1/style.css
+++ b/project1/style.css
@@ -18,6 +18,7 @@ body {
   max-width: 1140px;
   padding: 0 20px 0 20px;
   transform: translateX();
+  margin: 0 auto;
 }
 
 section {
@@ -134,7 +135,7 @@ h1 span {
   background-image: linear-gradient(90deg, #ffffff 50%, transparent 50%);
 }
 
-/* section Our Service */
+/* services */
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -148,7 +149,7 @@ h1 span {
   position: absolute;
 }
 
-.box {
+.services p {
   position: relative;
 }
 
