--- a/project1/style.css
+++ b/project1/style.css
@@ -136,6 +136,22 @@ h1 span {
 }
 
 /* services */
+.services {
+  padding: 96px 0 0 0;
+}
+
+section h2 {
+  font-size: 48px;
+  margin: 0 0 72px 0;
+  flex: 100%;
+}
+
+.services h3 {
+  font-size: 24px;
+  margin: 0 0 12px 0;
+  flex: 100%;
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -143,21 +159,55 @@ h1 span {
   flex: 0 0 33.333%;
 }
 
-.row h3 {
-  font-size: 24px;
-  margin: 0 0 12px 0;
-  position: absolute;
-}
-
-.services p {
+.box {
+  flex: 0 0 33.333%;
   position: relative;
+  padding: 0 15px;
 }
 
 .box-number {
   position: absolute;
   font-size: 144px;
+  top: 0;
   line-height: 1;
-  font-weight: 1000;
-  offset: 100px 100px 100px 100px;
-  padding: 0;
+  color: #33d9b2;
+}
+
+.center {
+  justify-content: center;
+}
+
+.box p {
+  margin: 0;
+}
+
+.box p:first-of-type {
+  font-weight: bold;
+}
+
+.btn-two {
+  border-color: #33d9b2;
+  color: #33d9b2;
+  background-image: linear-gradient(90deg, #ffffff 50%, transparent 50%);
+}
+
+.btn-three {
+  border-color: #ff5252;
+  color: #ff5252;
+  background-image: linear-gradient(90deg, #ffffff 50%, transparent 50%);
+}
+
+.btn-four {
+  border-color: #0097e6;
+  color: #0097e6;
+  background-image: linear-gradient(90deg, #ffffff 50%, transparent 50%);
+}
+
+/* our work */
+.our-work {
+  padding: 96px 0 0 0;
+}
+
+.our-work .box {
+  flex: 0 0 50%;
 }
