--- a/project1/style.scss
+++ b/project1/style.scss
@@ -286,3 +286,28 @@ form{
     flex: 1 0 0;
     padding: 0;
 }
+
+h4{
+   margin: 0; 
+   position: relative;
+}
+
+.position{
+    font-size: 20px;
+    font-weight: bolder;
+    margin: 0;
+}
+
+.contact-details{
+    padding-bottom: 20px;
+}
+
+form h4::after{
+position: absolute;
+content: '';
+    bottom: -15px;
+    left: -3%;
+    width: 200px;
+    height: 5px;
+    background: $color-text-one;
+}
