--- a/project1/style.css
+++ b/project1/style.css
@@ -168,9 +168,10 @@ h3 {
 .box-number {
   position: absolute;
   font-size: 144px;
-  top: 0;
+  top: -10%;
   line-height: 1;
   color: #33d9b2;
+  opacity: 0.3;
 }
 
 .center {
@@ -206,6 +207,17 @@ h3 {
 /* our work */
 .our-work {
   padding: 96px 0 0 0;
+}
+
+.box-our-work {
+  flex: 0 0 50%;
+  position: relative;
+  padding: 0 15px 96px 15px;
+  min-height: 300px;
+}
+
+.box-our-work p:first-of-type {
+  font-weight: bold;
 }
 
 .our-work .box {
@@ -254,9 +266,17 @@ h3 {
   min-height: 500px;
 }
 
+form p {
+  border-bottom: 3px solid #ffffff;
+  margin: 0;
+  padding: 10px;
+}
+
 form {
   flex: 2 0 0;
   padding-right: 96px;
+  overflow: auto;
+  background-color: #0097e6;
 }
 
 .contact-us .box {
@@ -264,9 +284,32 @@ form {
   padding: 0;
 }
 
-h4 {
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  background-color: #0097e6;
+  opacity: 1;
+  /* Firefox */
+  color: #ffffff;
+  font-family: 'Inconsolata';
+  font-size: 16px;
+}
+
+input[type=text] {
+  width: 100%;
+  margin: 8px 0;
+  border: none;
+  box-shadow: none;
   margin: 0;
-  position: relative;
+  font-family: 'Inconsolata';
+  font-weight: 600;
+  padding: 0;
+  max-width: 50%;
+}
+
+.message-placeholder {
+  height: 500px;
+  text-align: left;
+  vertical-align: top;
 }
 
 .position {
@@ -275,16 +318,31 @@ h4 {
   margin: 0;
 }
 
+address {
+  font-style: normal;
+}
+
 .contact-details {
   padding-bottom: 20px;
 }
 
-form h4::after {
-  position: absolute;
-  content: '';
-  bottom: -15px;
-  left: -3%;
-  width: 200px;
-  height: 5px;
-  background: #ffffff;
+/* footer */
+footer {
+  text-align: center;
+  padding: 48px 0;
+}
+
+.social-media i {
+  font-size: 30px;
+  background: orangered;
+  width: 60px;
+  height: 60px;
+  color: #fff;
+  border-radius: 50%;
+  line-height: 60px;
+}
+
+.social-media li {
+  display: inline;
+  font-size: 0;
 }
