--- a/project1/style.css
+++ b/project1/style.css
@@ -136,10 +136,6 @@ h1 span {
 }
 
 /* services */
-.services {
-  padding: 96px 0 0 0;
-}
-
 section h2 {
   font-size: 48px;
   margin: 0 0 72px 0;
@@ -205,10 +201,6 @@ h3 {
 }
 
 /* our work */
-.our-work {
-  padding: 96px 0 0 0;
-}
-
 .box-our-work {
   flex: 0 0 50%;
   position: relative;
@@ -227,15 +219,8 @@ h3 {
 }
 
 .our-work-description {
-  padding: 36px 0 36px 55%;
+  padding: 36px 0 36px 60%;
   text-align: left;
-}
-
-.our-work img {
-  max-width: 250px;
-  height: 100%;
-  object-fit: cover;
-  padding-bottom: 96px;
 }
 
 .skill-image {
@@ -243,6 +228,13 @@ h3 {
   width: 50%;
   height: 100%;
   overflow: hidden;
+}
+
+.skill-image img {
+  max-width: 250px;
+  height: 100%;
+  object-fit: cover;
+  padding: 0 0 96px 0;
 }
 
 .skill-image::after {
@@ -345,4 +337,48 @@ footer {
 .social-media li {
   display: inline;
   font-size: 0;
+}
+
+/* Media */
+@media (max-width: 767px) {
+  .splash h1 {
+    font-size: 58px;
+  }
+  section {
+    padding: 30px 0;
+  }
+  .row {
+    flex-direction: column;
+  }
+  .box {
+    padding: 0 15px 15px 15px;
+  }
+  .box-our-work {
+    padding: 0 15px 15px 15px;
+  }
+  .skill-image {
+    width: 100%;
+    height: 150px;
+    position: relative;
+  }
+  .our-work img {
+    max-width: 100%;
+    width: 100%;
+    padding: 0;
+  }
+  .our-work-description {
+    padding: 36px 0 36px 0;
+    text-align: left;
+  }
+  form {
+    min-height: 700px;
+    padding: 0;
+  }
+  section h2 {
+    margin: 0;
+  }
+  input[type=text] {
+    width: 100%;
+    max-width: 100%;
+  }
 }
