--- a/project1/style.scss
+++ b/project1/style.scss
@@ -23,10 +23,8 @@ body {
 }
 
 .container {
-    // ten max width to wymiar aż do granic margina? 
     max-width: 1140px;
     padding: 0 20px 0 20px;
-    // o co chodzi z tym translateX? 
     transform: translateX();
     margin: 0 auto;
 
@@ -49,11 +47,9 @@ section {
     list-style-type: none;
 }
 
-// czy takie szczegółowe (ekstra 'ul') jest wskazane?
 .navigation li {
     display: inline-block;
     margin: 0 36px 0 0;
-    // po co?
     position: relative;
 }
 
@@ -66,7 +62,6 @@ section {
     color: $color-two;
 }
 
-//second level
 .navigation ul ul li {
     display: block;
     margin: 0 0 12px 0;
@@ -74,7 +69,6 @@ section {
 
 .navigation ul ul {
     display: none;
-    //dalczego?
     left: 50%;
     transform: translateX(-50%);
 }
@@ -88,7 +82,6 @@ section {
 .navigation ul ul a {
     color: $color-text-two;
     padding: 0 24px;
-    //potrzebne?
     display: block;
 
 }
@@ -157,10 +150,6 @@ h1 span {
 
 /* services */
 
-.services {
-    padding: 96px 0 0 0;
-}
-
 section h2 {
     font-size: 48px;
     margin: 0 0 72px 0;
@@ -227,10 +216,6 @@ h3 {
 
 /* our work */
 
-.our-work {
-    padding: 96px 0 0 0;
-}
-
 .box-our-work {
     flex: 0 0 50%;
     position: relative;
@@ -250,15 +235,8 @@ h3 {
 }
 
 .our-work-description {
-    padding: 36px 0 36px 55%;
+    padding: 36px 0 36px 60%;
     text-align: left;
-}
-
-.our-work img {
-    max-width: 250px;
-    height: 100%;
-    object-fit: cover;
-    padding-bottom: 96px;
 }
 
 .skill-image {
@@ -266,6 +244,13 @@ h3 {
     width: 50%;
     height: 100%;
     overflow: hidden;
+}
+
+.skill-image img {
+    max-width: 250px;
+    height: 100%;
+    object-fit: cover;
+    padding: 0 0 96px 0;
 }
 
 .skill-image::after {
@@ -367,7 +352,64 @@ footer {
     line-height: 60px;
 }
 
-.social-media li{
+.social-media li {
     display: inline;
     font-size: 0;
+}
+
+/* Media */
+
+@media (max-width: 767px) {
+    .splash h1 {
+        font-size: 58px;
+    }
+
+    section {
+        padding: 30px 0;
+
+    }
+
+    .row {
+        flex-direction: column;
+    }
+
+    .box {
+        padding: 0 15px 15px 15px;
+
+    }
+
+    .box-our-work {
+        padding: 0 15px 15px 15px;
+    }
+
+    .skill-image {
+        width: 100%;
+        height: 150px;
+        position: relative;
+    }
+
+    .our-work img {
+        max-width: 100%;
+        width: 100%;
+        padding: 0;
+    }
+
+    .our-work-description {
+        padding: 36px 0 36px 0;
+        text-align: left;
+    }
+
+    form {
+        min-height: 700px;
+        padding: 0;
+    }
+
+    section h2 {
+        margin: 0;
+    }
+
+    input[type=text] {
+        width: 100%;
+        max-width: 100%;
+    }
 }
