--- a/project1/style.scss
+++ b/project1/style.scss
@@ -27,7 +27,6 @@ body {
     padding: 0 20px 0 20px;
     transform: translateX();
     margin: 0 auto;
-
 }
 
 section {
@@ -64,7 +63,7 @@ section {
 
 .navigation ul ul li {
     display: block;
-    margin: 0 0 12px 0;
+    margin: 12px 0 12px 0;
 }
 
 .navigation ul ul {
@@ -275,13 +274,6 @@ h3 {
     min-height: 500px;
 }
 
-form p {
-    border-bottom: 3px solid $color-text-one;
-    margin: 0;
-    padding: 10px;
-
-}
-
 form {
     flex: 2 0 0;
     padding-right: 96px;
@@ -306,14 +298,28 @@ form {
 
 input[type=text] {
     width: 100%;
-    margin: 8px 0;
     border: none;
     box-shadow: none;
-    margin: 0;
     font-family: 'Inconsolata';
     font-weight: 600;
-    padding: 0;
-    max-width: 50%;
+    max-width: 100%;
+    background: transparent;
+    border-bottom: 3px solid $color-text-one;
+    margin: 0;
+    padding: 10px;
+}
+
+textarea{
+    width: 100%;
+    border: none;
+    box-shadow: none;
+    font-family: 'Inconsolata';
+    font-weight: 600;
+    max-width: 100%;
+    background: transparent;
+    border-bottom: 3px solid $color-text-one;
+    margin: 0;
+    padding: 10px;
 }
 
 .message-placeholder {
